--- a/index.css
+++ b/index.css
@@ -1,14 +1,19 @@
 body {
+    min-height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 .squares-container {
-    height: 960px;
-    width: 960px;
+    height: 500px;
+    width: 500px;
     display: flex;
     flex-wrap: wrap;
     border-style: solid;
+}
+.menu-board-container {
+    display: flex;
 }
 .row {
     display: flex;
@@ -18,10 +23,4 @@ body {
 
 .column {
     flex-basis: 100%;
-    border-style: solid;
-    border-color: black;
 }
-/* .draw:hover {
-    background-color: black;
-
-} */
