--- a/index.css
+++ b/index.css
@@ -11,9 +11,25 @@ body {
     display: flex;
     flex-wrap: wrap;
     border-style: solid;
+    border-color: crimson;
 }
 .menu-board-container {
     display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
+}
+
+button {
+    border-radius: 3px;
+    width: 50px;
+}
+
+.options-menu{
+    padding: 5px;
+    gap: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .row {
     display: flex;
